pending section 2.3 and 2.4

--- a/cap1-introducao.tex
+++ b/cap1-introducao.tex
@@ -31,7 +31,7 @@ A divisão dos relatórios será feita da seguinte maneira:
 \end{enumerate}
 \vspace{1.5mm}
  
-No Relatório I, que é este documento, será apresentada inicialmente uma análise de requisitos do sistema, matriz QFD (do inglês \textit{Quality Function Deployment}) para obtenção dos requisitos de projeto e matriz morfológica para seleção preliminar dos tipos de componentes do protótipo a ser simulado. Posteriormente serão apresentados o projeto conceitual e as estratégias para validação do protótipo em ambiente simulado.
+No Relatório I, que é este documento, será apresentada inicialmente uma análise de requisitos do sistema, matriz QFD (do inglês \textit{Quality Function Deployment}) para obtenção dos requisitos de projeto e matriz morfológica para seleção preliminar dos tipos de componentes do protótipo a ser simulado. Posteriormente serão apresentados o projeto conceitual, o design proposto e as estratégias para validação do protótipo em ambiente simulado.
 
 No Relatório II será apresentado o projeto detalhado, com especificação dos componentes e sistema, juntamente com um cronograma para execução das tarefas.
 
