--- a/cap3-projeto-conceitual.tex
+++ b/cap3-projeto-conceitual.tex
@@ -1,5 +1,5 @@
-\section{Projeto Conceitual}
-\label{sec:projeto-conceitual}
+\section{Design}
+\label{sec:design}
 
 O design do protótipo foi concebido a partir das definições oriundas da matriz morfológica e também de inspirações de ROVs comerciais, como o \textit{Seafox} e o \textit{BlueROV2}, mostrados na Figura \ref{fig:seafoxbluerov2}.
 
