--- a/preambulo.tex
+++ b/preambulo.tex
@@ -12,6 +12,7 @@
 \usepackage{vmargin}
 \usepackage{setspace}
 \usepackage{hyperref}
+\usepackage{enumitem}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
 \numberwithin{figure}{section}
 \numberwithin{table}{section}
